fix truncate text

--- a/src/components/Templates/SceneTemplate/styles.module.scss
+++ b/src/components/Templates/SceneTemplate/styles.module.scss
@@ -135,6 +135,7 @@
     border: none;
     cursor: pointer;
     outline: none;
+    padding: 0;
   }
 }
 
